--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Bootstrap Transfer Demo</title>
 
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-transfer.css" rel="stylesheet">
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="dist/bootstrap-transfer.css" rel="stylesheet">
     </head>
 
     <body>
@@ -14,14 +14,15 @@
         <div id="test" style="width:400px">
         </div>
 
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap-transfer.js"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="dist/bootstrap-transfer.js"></script>
         <script>
             $(function () {
-                var t = $('#test').bootstrapTransfer(
-                        {'target_id': 'multi-select-input',
-                            'height': '15em',
-                            'hilite_selection': true});
+                var t = $('#test').bootstrapTransfer({
+                    'target_id': 'multi-select-input',
+                    'height': '15em',
+                    'hilite_selection': true
+                });
 
                 t.populate([
                     {value: "1", content: "Apple"},
@@ -30,13 +31,9 @@
                     {value: "4", content: "Peach"},
                     {value: "5", content: "Grapes"}
                 ]);
-                //t.set_values(["2", "4"]);
+                t.set_values(["2", "4"]);
                 //console.log(t.get_values());
             });
         </script>
     </body>
 </html>
-
-
-
-
